; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_recvbuff.c_get_full_recv_buffer.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/libntp/extr_recvbuff.c_get_full_recv_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@full_recv_fifo = common dso_local global i32 0, align 4
@link = common dso_local global i32 0, align 4
@full_recvbufs = common dso_local global i32 0, align 4
@RECV_INC = common dso_local global i32 0, align 4
@buffer_shortfall = common dso_local global i64 0, align 8
@free_recv_list = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @get_full_recv_buffer() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 (...) @LOCK()
  %3 = load i32*, i32** %1, align 8
  %4 = load i32, i32* @full_recv_fifo, align 4
  %5 = load i32, i32* @link, align 4
  %6 = call i32 @UNLINK_FIFO(i32* %3, i32 %4, i32 %5)
  %7 = load i32*, i32** %1, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = load i32, i32* @full_recvbufs, align 4
  %11 = add nsw i32 %10, -1
  store i32 %11, i32* @full_recvbufs, align 4
  br label %12

12:                                               ; preds = %9, %0
  %13 = call i32 (...) @UNLOCK()
  %14 = load i32*, i32** %1, align 8
  ret i32* %14
}

declare dso_local i32 @LOCK(...) #1

declare dso_local i32 @UNLINK_FIFO(i32*, i32, i32) #1

declare dso_local i32 @UNLOCK(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
